--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,5 @@ body{
   width: 100%;
   background:linear-gradient(to right top, #65dfc9, #6cdbeb);
   background-image: linear-gradient(195deg, rgb(51, 138, 249),rgb(47, 248, 255));
+  color: #ffff;
 }
