--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,3 +1,47 @@
 .header{
     width: 100%;
+    min-height: 20vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-container{
+    width: 25rem;
+    background-color: #ffffff;
+    padding: 0.5rem;
+    margin: 2rem auto;
+    display: flex;
+    border-radius: 1rem;
+    box-shadow: 4px 4px 10px 1px rgba(0, 0, 0, 0.2);
+
+}
+.input{
+      width: 100%;
+      border: none;
+      border-radius: 1rem 0rem 0rem 1rem;
+      padding: 1rem;
+      height: 3rem;
+      outline: none;
+      font-size: 1.2rem;
+}
+.input::placeholder {
+      color: grey;
+}
+.search-btn{
+      width: 4rem;
+      height: 3rem;
+      border: none;
+      border-radius: 1rem 1rem 1rem 1rem ;
+      text-align: center;
+      cursor: pointer;
+      font-size: 1.7rem;
+      outline: none;
+      background-color: rgb(42, 159, 231);
+}
+.search-btn:hover{
+      transition: ease .5s;
+      background-color:#ffffff;
+      color: rgb(42, 159, 231);
 }
