--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 body{
   min-height: 100vh;
   width: 100%;
-  background:linear-gradient(to right top, #65dfc9, #6cdbeb);
-  background-image: linear-gradient(195deg, rgb(51, 138, 249),rgb(47, 248, 255));
+  background: #00B4DB;
+  background: -webkit-linear-gradient(to bottom, #0083B0, #00B4DB);
+  background: linear-gradient(to bottom, #0083B0, #00B4DB);
   color: #ffff;
 }
