--- a/src/style/header.css
+++ b/src/style/header.css
@@ -14,39 +14,47 @@
 }
 
 .search-container{
+    background: white;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.3));
     width: 25rem;
-    background-color: #ffffff;
     padding: 0.5rem;
     display: flex;
     border-radius: 1rem;
     box-shadow: 4px 4px 10px 1px rgba(0, 0, 0, 0.2);
-
+      
 }
 .input{
+      background: none;
       width: 100%;
       border: none;
       border-radius: 1rem 0rem 0rem 1rem;
       padding: 1rem;
-      height: 3rem;
       outline: none;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+
 }
 .input::placeholder {
-      color: grey;
+      font-size: 1.4rem;
+      color: #ffffff;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
 .search-btn{
-      width: 4rem;
-      height: 3rem;
+      width: 4.5rem;
+      height: 3.5rem;
       border: none;
       border-radius: 1rem 1rem 1rem 1rem ;
       text-align: center;
       cursor: pointer;
       font-size: 1.7rem;
       outline: none;
-      background-color: rgb(42, 159, 231);
+      background: #00B4DB;
+      border: 2px solid white;
+      transition: background .5s ease;
 }
-.search-btn:hover{
-      transition: ease .5s;
-      background-color:#ffffff;
-      color: rgb(42, 159, 231);
+.fa-search-location{
+      color: #ffffff;
+}
+.search-btn:hover {
+     background: #0083B0;
 }
