--- a/src/style/main.css
+++ b/src/style/main.css
@@ -8,12 +8,12 @@
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
 }
 .info-container{
-    width: 60%;
-    height: 35rem;
+    width: 40%;
+    height: 30rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     border-radius: 1rem;
     background: white;
     background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.3));
@@ -27,6 +27,7 @@
     align-items: center;
     justify-content: space-between;
     height: 5rem;
+    text-align: center;
 }
 .location {
     font-size: 3rem;
@@ -35,11 +36,9 @@
 .city{
     font-size: 2rem;
 }
-.icon{
-    font-size: 5rem;
-}
 .degrees{
-    font-size: 5rem;
+    margin: 1.5rem 0rem;
+    font-size: 6rem;
 }
 .description{
     font-size: 2rem;
