--- a/src/style/main.css
+++ b/src/style/main.css
@@ -14,11 +14,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    justify-content: space-around;
     border-radius: 1rem;
     background: white;
     background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.3));
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
-    padding: 4rem;
+    padding: 5rem;
 }
 .region-container{
     display: flex;
@@ -29,6 +30,13 @@
     height: 5rem;
     text-align: center;
 }
+.description{
+    font-size: 2rem;
+}
+.degrees{
+    margin: 1.5rem 0rem;
+    font-size: 6rem;
+}
 .location {
     font-size: 3rem;
     margin-bottom: .5rem;
@@ -36,10 +44,40 @@
 .city{
     font-size: 2rem;
 }
+
+@media screen and (max-width: 1380px) {
+.info-container{
+     width: 50%;
+    height: 40rem;
+}
+.location {
+    font-size: 2.5rem;
+}
+.city{
+    font-size: 1.4rem;
+}
 .degrees{
-    margin: 1.5rem 0rem;
-    font-size: 6rem;
+    margin: 0rem 0rem;
+}
+}
+
+@media screen and (max-width: 630px) {
+
+    .info-container{
+     width: 80%;
+    height: 25rem;
+}
+.location {
+    font-size: 2rem;
+}
+.city{
+    font-size: 1rem;
 }
 .description{
     font-size: 2rem;
+}
+.degrees{
+   margin: 1rem 0rem;
+    font-size: 4rem;
+}
 }
