--- a/src/Sass/header.scss
+++ b/src/Sass/header.scss
@@ -50,6 +50,7 @@
 
       .input::placeholder {
       font-size: 1.4rem;
+      font-weight: 200;
       color: #ffffff;
       text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
       }
